--- a/InterbikesEcommerce/InterbikesWeb/appsettings.json
+++ b/InterbikesEcommerce/InterbikesWeb/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaulConnection": "Server=DESKTOP-09FUJPQ\\SQLEXPRESS;Database=InterbikesEcommerce;Trusted_Connection=True;TrustServerCertificate=True;"
+  }
 }
