chore: Add setup Application DbContext and Created the database

--- a/InterbikesEcommerce/InterbikesWeb/appsettings.json
+++ b/InterbikesEcommerce/InterbikesWeb/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaulConnection": "Server=DESKTOP-09FUJPQ\\SQLEXPRESS;Database=InterbikesEcommerce;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=DESKTOP-09FUJPQ\\SQLEXPRESS;Database=InterbikesEcommerce;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
