chore: N-Tier Architecture

--- a/InterbikesEcommerce/InterbikesWeb/InterbikesWeb.csproj
+++ b/InterbikesEcommerce/InterbikesWeb/InterbikesWeb.csproj
@@ -15,4 +15,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Interbikes.DataAccess\Interbikes.DataAccess.csproj" />
+  </ItemGroup>
+
 </Project>
