--- a/InterbikesEcommerce/Interbikes.DataAccess/Interbikes.DataAccess.csproj
+++ b/InterbikesEcommerce/Interbikes.DataAccess/Interbikes.DataAccess.csproj
@@ -6,4 +6,18 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Interbikes.Models\Interbikes.Models.csproj" />
+    <ProjectReference Include="..\Interbikes.Utility\Interbikes.Utility.csproj" />
+  </ItemGroup>
+
 </Project>
